--- a/src/components/styles/title-section.css
+++ b/src/components/styles/title-section.css
@@ -9,6 +9,8 @@
     line-height: normal;
     text-transform: uppercase;
     margin-left: 8rem;
+    margin-top: 8rem !important;
+    
 }
 
 .img1{
@@ -16,8 +18,11 @@
     height: 167.561px;
     margin-right: 14rem;
     margin-left:12rem;
+    margin-top: 6rem !important;
+
 }
 .boss h1{
+    margin-top: 4rem;
     color: var(--1st, #181E4B);
     font-family: Volkhov;
     font-size: 84px;
@@ -25,6 +30,13 @@
     font-weight: 700;
     line-height: 89px; /* 105.952% */
     letter-spacing: -3.36px;
+    
+}
+.boss{
+    padding-top: 0rem;
+    padding-left:6rem ;
+    align-items: center;
+    justify-content: space-between;
 }
 .boss p{
     width: 600px;
@@ -36,7 +48,8 @@
     font-weight: 500;
     line-height: 30px; /* 187.5% */
     margin-top: 3rem !important;
-    margin-left: 5rem;
+    margin-left: 4rem;
+    
 }
 
 .img2{
@@ -102,12 +115,12 @@ border-radius: 30px 0px 10px 0px;
 background: #DF6951;
 margin: 0.8rem;
 margin-top: 2rem;
-margin-left: 5rem !important;
+margin-left:3rem !important;
 
 }
 
 .y{
-    margin-right: 5rem !important;
+    margin-right: 3rem !important;
     width: 90px;
     height: 90px;
     flex-shrink: 0;
@@ -118,3 +131,8 @@ margin-left: 5rem !important;
     }
     
     
+.card-content{
+    margin-left: 7rem;
+    margin-right: 7rem;
+    margin-top: 5rem;
+}
